welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:17: error: not found: value avancer
    avancer();
    ^BDRBuggle:38: error: type mismatch;
 found   : Unit
 required: Boolean
  } else if (lettre ="X"){
                    ^